Cleaned up the UI and fixed create item bugs

--- a/src/styles/components/_todo-list.scss
+++ b/src/styles/components/_todo-list.scss
@@ -1,7 +1,12 @@
 .todo-list {
+  // style resets
   list-style: none;
+  padding: 0;
 }
 
 .todo-list__item {
-  
+  border: rem(1) solid #c1c1c1;
+  padding: s(small);
+  margin-bottom: s(small);
+  width: 100%;
 }
