--- a/src/styles/utils/_u-spacing.scss
+++ b/src/styles/utils/_u-spacing.scss
@@ -2,6 +2,7 @@
 
 $spacings: (
   small: rem(8),
+  medium: rem(16),
 );
 
 // just writes out a nice function for us to access our sizes in the aboe map 
@@ -18,4 +19,17 @@ $spacings: (
 
 .u-spacing-m-small {
   margin: s(small);
+}
+
+.u-spacing-mb-medium {
+  margin-bottom: s(medium);
+}
+
+.u-spacing-mb-small {
+  margin-bottom: s(small);
+}
+
+.u-spacing-mh-small {
+  margin-left: s(small);
+  margin-right: s(small);
 }
